--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -9,22 +9,18 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="{% static "portfolio/custom.css" %}">
-
+  <link rel="stylesheet" href="{% static 'portfolio/custom.css' %}">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-
-  <link rel="icon" type="image/png" href="{% static "portfolio/Baki.png" %}">
-
-  <title>Nick Walter</title>
+  <link rel="icon" type="image/png" href="{% static 'portfolio/Baki.png' %}">
+  <title>Shamil Mazitov</title>
 </head>
 
 <body>
 
-  <nav id="topNav" class="navbar navbar-expand-md navbar-light">
+  <nav id="topNav" class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static "portfolio/Baki.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Shamil's logo">
+        <img src="{% static 'portfolio/Baki.png' %}" width="30" height="30" class="d-inline-block align-top" alt="Shamil's logo">
         <span>Shamil</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +29,7 @@
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% static "portfolio/Krem.pdf" %}">Resume</a>
+            <a class="nav-link" href="{% static 'portfolio/Krem.pdf' %}">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/LILDesT" target="_blank">GitHub</a>
@@ -41,19 +37,19 @@
           <li class="nav-item">
             <a class="nav-link" href="https://vk.com/nemaincrafter" target="_blank">VK</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a role="button" href="{% url 'blog:all_blogs' %}" class="btn btn-primary">Blog</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="container">
+
+  <div class="container mt-4">
     {% block content %}{% endblock %}
   </div>
 
   <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
